--- a/docs/docs/tutorials/llm_chain.ipynb
+++ b/docs/docs/tutorials/llm_chain.ipynb
@@ -73,7 +73,7 @@
     "After you sign up at the link above, make sure to set your environment variables to start logging traces:\n",
     "\n",
     "```shell\n",
-    "export LANGCHAIN_TRACING_V2=\"true\"\n",
+    "export LANGCHAIN_TRACING_V2=\"True\"\n",
     "export LANGCHAIN_API_KEY=\"...\"\n",
     "```\n",
     "\n",
@@ -83,7 +83,7 @@
     "import getpass\n",
     "import os\n",
     "\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"True\"\n",
     "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()\n",
     "```"
    ]
